--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2351,6 +2351,9 @@
     <ClCompile Include="UVa\100\108.cpp">
       <Filter>UVaOJ\100\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\109.cpp">
+      <Filter>UVaOJ\100\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
