--- a/TopCoder/greed.conf
+++ b/TopCoder/greed.conf
@@ -1,2 +1,3 @@
 greed.language.cpp.templateDef.source.templateFile = "greed-source.cpp"
 greed.language.cpp.templateDef.filetest.templateFile = "greed-test.cpp"
+greed.codeRoot = "${Contest;category(srm=25)}/${Contest.Name}"
