--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2405,6 +2405,9 @@
     <ClCompile Include="Codeforces\1\4A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\4B.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
