--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -297,6 +297,9 @@
     <Filter Include="Codeforces\25">
       <UniqueIdentifier>{a1071728-f3a4-4ab6-9359-b2f35d194760}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Codeforces\50">
+      <UniqueIdentifier>{3c2c01b9-69e7-4637-83e9-48d32c6fcc84}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\105.cpp">
@@ -2413,6 +2416,9 @@
     </ClCompile>
     <ClCompile Include="Codeforces\25\26A.cpp">
       <Filter>Codeforces\25</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\50\50A.cpp">
+      <Filter>Codeforces\50</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
