--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2420,6 +2420,9 @@
     <ClCompile Include="Codeforces\50\50A.cpp">
       <Filter>Codeforces\50</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\50\50B.cpp">
+      <Filter>Codeforces\50</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
