--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2423,6 +2423,9 @@
     <ClCompile Include="Codeforces\50\50B.cpp">
       <Filter>Codeforces\50</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\50\61A.cpp">
+      <Filter>Codeforces\50</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
