--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -303,6 +303,9 @@
     <Filter Include="Codeforces\75">
       <UniqueIdentifier>{84b2988b-a8e1-4824-bdaa-888632e25889}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Codeforces\100">
+      <UniqueIdentifier>{fb92bbef-a9ed-408f-9d65-53ddaa05f4a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\105.cpp">
@@ -2437,6 +2440,9 @@
     </ClCompile>
     <ClCompile Include="Codeforces\75\96A.cpp">
       <Filter>Codeforces\75</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\100\116A.cpp">
+      <Filter>Codeforces\100</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
