--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2444,6 +2444,9 @@
     <ClCompile Include="Codeforces\100\116A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\118A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
