--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2453,6 +2453,9 @@
     <ClCompile Include="Codeforces\125\131A.cpp">
       <Filter>Codeforces\125</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\125\131B.cpp">
+      <Filter>Codeforces\125</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
