--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2468,6 +2468,9 @@
     <ClCompile Include="Codeforces\150\158A.cpp">
       <Filter>Codeforces\150</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\150\158B.cpp">
+      <Filter>Codeforces\150</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
