--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2489,6 +2489,9 @@
     <ClCompile Include="Codeforces\225\246B.cpp">
       <Filter>Codeforces\225</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\250\266A.cpp">
+      <Filter>Codeforces\250</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
