--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2498,6 +2498,9 @@
     <ClCompile Include="Codeforces\250\268B.cpp">
       <Filter>Codeforces\250</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\250\268C.cpp">
+      <Filter>Codeforces\250</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
